most recent render

--- a/report/SAR_USWC_Yelloweye_rockfish_skeleton.tex
+++ b/report/SAR_USWC_Yelloweye_rockfish_skeleton.tex
@@ -2065,7 +2065,8 @@ about model structure on management quantities included a model with an
 estimated natural mortality rate (\(M\)), one with estimated steepness
 (\(h\)) of the stock-recruit relationship, and one using the 2017
 length-weight relationship. Summaries of model results for these
-sensitivities are presented in \textbf{?@tbl-sens-mod-results}.
+sensitivities are presented in
+Table~\ref{tbl-sensitivities-model-specs}.
 
 The estimated natural mortality was slightly higher than that of the
 base model (\textasciitilde{} 0.053 compared to \textasciitilde{} 0.044
