--- a/Rcode/morgans_diagnostics.Rmd
+++ b/Rcode/morgans_diagnostics.Rmd
@@ -29,23 +29,23 @@ exe_loc <- here::here(directory, 'ss3.exe')
 ```{r}
 # Specify parameters to profile over along with the parameter range and step size:
 
-# profile_info <- get_settings_profile(
-#   parameters =  c("NatM_break_1_Fem_GP_1", "SR_BH_steep", "SR_LN(R0)"),
-#   low =  c(0.03, 0.25, 4.5),
-#   high = c(0.06, 1.0, 6),
-#   step_size = c(0.002, 0.05, 0.15),
-#   param_space = c('real', 'real', 'real')
-#   )
-
-#maybe change NatM to end at 0.05, model 0.055 did not converge
-
 profile_info <- get_settings_profile(
-  parameters =  c("NatM_break_1_Fem_GP_1"),
-  low =  c(0.03),
-  high = c(0.06),
-  step_size = c(0.002),
-  param_space = c('real')
+  parameters =  c("NatM_break_1_Fem_GP_1", "SR_BH_steep", "SR_LN(R0)"),
+  low =  c(0.03, 0.25, 4.5),
+  high = c(0.06, 1.0, 6),
+  step_size = c(0.002, 0.05, 0.15),
+  param_space = c('real', 'real', 'real')
   )
+
+# model 0.055 did not converge
+
+# profile_info <- get_settings_profile(
+#   parameters =  c("NatM_break_1_Fem_GP_1"),
+#   low =  c(0.03),
+#   high = c(0.06),
+#   step_size = c(0.002),
+#   param_space = c('real')
+#   )
 ```
 
 #### MCMC ####
@@ -93,22 +93,22 @@ future::plan(future::multisession, workers = ncores)
 model_settings <- get_settings(
   settings = list(
     base_name = base_model_name,
-    run = c("profile"),
+    run = c("profile","jitter","retro"),
     exe = exe_loc,
 
-    # # Profile Settings
+    # Profile Settings
     profile_details = profile_info,
 
-    # # Jitter Settings
-    # extras = "-nohess",
-    # Njitter = 50,
-    # jitter_fraction = 0.10,
-    # jitter_init_values_src = NULL,
-    
-    # Retrospective Settings
-    # newsubdir = "retro",
-    # retro_yrs = -1:-5,
-    # exe = exe_loc,
+     # Jitter Settings
+     extras = "-nohess",
+     Njitter = 50,
+     jitter_fraction = 0.10,
+     jitter_init_values_src = NULL,
+
+     # Retrospective Settings
+     newsubdir = "retro",
+     retro_yrs = -1:-5,
+     exe = exe_loc,
     
     # Plot target lines
     btarg = NULL,
@@ -119,8 +119,6 @@ run_diagnostics(mydir = directory, model_settings = model_settings)
 
 future::plan(future::sequential)
 
-
-#"retro", "jitter", 
 ```
 
 ### Rerun selected values for a profile ###
