--- a/Rcode/decision_table_models.Rmd
+++ b/Rcode/decision_table_models.Rmd
@@ -54,7 +54,7 @@ SS_plots(replist = SS_output(here::here("model", "2025_low_state")),dir = here::
 
 ```
 
-Comparison Plots?
+Comparison Plots
 
 ```{r}
 ### Final Comparison Plots
