add model output for decision table

--- a/report/002_load_tables.qmd
+++ b/report/002_load_tables.qmd
@@ -247,6 +247,20 @@ mod_high_A <- replist
 mod_high_B <- replist
 mod_high_C <- replist 
 
+
+#######################################################
+mod_low_A <- r4ss::SS_output(here::here("model/2025_low_state"),    
+  SpawnOutputLabel = "Spawning output (trillions of eggs)", printstats = FALSE, verbose = FALSE)
+#mod_low_B <- r4ss::SS_output(here::here("model_runs/6.28_lowR0_forecast_avg_attain"))
+
+mod_base_A <- mod_out
+#mod_base_B <- r4ss::SS_output(here::here("model_runs/6.30_base_forecast_avg_attain"))
+
+mod_high_A <- r4ss::SS_output(here::here("model/2025_high_state"), 
+  SpawnOutputLabel = "Spawning output (trillions of eggs)", printstats = FALSE, verbose = FALSE)
+#mod_high_B <- r4ss::SS_output(here::here("model_runs/6.29_highR0_forecast_avg_attain")) 
+
+
 ```
 
 
