working through small stuff

--- a/report/SAR_USWC_Yelloweye_rockfish_skeleton.qmd
+++ b/report/SAR_USWC_Yelloweye_rockfish_skeleton.qmd
@@ -279,6 +279,7 @@ a <- knitr::knit_child('002_load_tables.qmd', quiet = TRUE)
 cat(a, sep = '\n')
 ```
 
+ {{< pagebreak >}}
 
 ```{r, results='asis'}
 #| label: 'executive_summary'
