--- a/report/08_tables.qmd
+++ b/report/08_tables.qmd
@@ -365,7 +365,7 @@ indices <- read.csv(here::here("report", "figures", "sensitivities", "indices_ta
 #indices_and_comps <- inner_join(indices, comps, by = c("Label", "Base"))
 #names(indices) <- gsub("X..", "", names(indices))
 
-names(indices) <- c("Label","Base","- CA REC Index","- OR REC Index","- WA REC Index","- CA CPFV Index","- ORFS Index","- Triennial Index","- WCGBTS Index","- IPHC Index","No indices")
+#names(indices) <- c("Label","Base","- CA REC Index","- OR REC Index","- WA REC Index","- CA CPFV Index","- ORFS Index","- Triennial Index","- WCGBTS Index","- IPHC Index","No indices")
 
 table_sens(indices)
 
@@ -391,7 +391,7 @@ comps <- read.csv(here::here("report", "figures", "sensitivities", "comp_data_ta
 #indices_and_comps <- inner_join(indices, comps, by = c("Label", "Base"))
 #names(comps) <- gsub("X..", "", names(comps))
 
-names(comps) <-c("Label","Base","- CA TWL length comps","- CA NONTWL length comps","- CA REC length comps","- ORWA TWL length comps","- ORWA NONTWL length comps","- OR REC length comps","No length comps","- IPHC age comps","No age comps","McAllister & Ianelli")
+#names(comps) <-c("Label","Base","- CA TWL length comps","- CA NONTWL length comps","- CA REC length comps","- ORWA TWL length comps","- ORWA NONTWL length comps","- OR REC length comps","No length comps","- IPHC age comps","No age comps","McAllister & Ianelli")
 
 table_sens(comps)
 
