--- a/report/01_executive_summary.qmd
+++ b/report/01_executive_summary.qmd
@@ -10,18 +10,19 @@ sa4ss::es_table_tex will convert them to text files formatted as LaTeX tables if
 
 <!-- Species/area, including an evaluation of any potential biological basis for regional management -->
 
-This update assessment reports the status of Yelloweye Rockfish (*Sebastes ruberrimus*) off the U.S. West Coast using data through 2024. Yelloweye Rockfish are found from the Gulf of Alaska to northern Baja California in Mexico across the northeastern Pacific Ocean. Their core distribution is from southeast Alaska to central California on the west coast of the United States. Yelloweye Rockfish are strongly associated with rocky bottom habtiat and adults are considered to be solitary and sedentary after settlement. Given the general perception of the sedentary nature of Yelloweye Rockfish adults and the moderate amount of mixing that occurs during the pelagic larval stage, the previous Yelloweye Rockfish assessment modeled the West coast population as a two-area assessment (California and a combined Oregon-Washington area) with a common stock recruitment relationship. This update assessment maintains this basic structure. 
+This update assessment reports the status of Yelloweye Rockfish (*Sebastes ruberrimus*) off the U.S. West Coast using data through 2024. Yelloweye Rockfish are found from the Gulf of Alaska to northern Baja California in Mexico across the northeastern Pacific Ocean. Their core distribution is from southeast Alaska to central California on the west coast of the United States. Yelloweye Rockfish are strongly associated with rocky bottom habtiat and adults are considered to be solitary and sedentary after settlement. Given the general perception of the sedentary nature of Yelloweye Rockfish adults and the moderate amount of mixing that occurs during the pelagic larval stage, the previous Yelloweye Rockfish assessment, conducted in 2017, modeled the West coast population as a two-area assessment (California and a combined Oregon-Washington area) with a common stock recruitment relationship. This update assessment necessarily maintains this same structure. 
 
 ## Catches{-}
 
-Catches for Yelloweye Rockfish have averaged over 20 mt in recent years (@fig-es-landings, @tbl-es-catches). Yelloweye Rockfish was declared overfished in 2002 and remains under a rebuilding plan that substantially limits catch. However, as other rockfish stocks have rebuilt and Yelloweye Rockfish has progressed under it's rebuilding plan, catches have slowly increased in recent years, primarily in the Oregon-Washington non-trawl fleet and the recreational fleets. 
+Catches for Yelloweye Rockfish have averaged over $20 mt$ in recent years (@fig-es-landings, @tbl-es-catches). Yelloweye Rockfish was declared overfished in $2002$ and remains under a rebuilding plan that substantially limits catch. However, as other rockfish stocks have rebuilt and Yelloweye Rockfish has progressed under it's rebuilding plan, catches have slowly increased in recent years, primarily in the Oregon-Washington non-trawl fleet and the recreational fleets. 
 
 ```{r, fig-es-landings} 
 #| label: fig-es-landings
 #| echo: false 
 #| warning: false 
 #| eval: true 
-#| fig-cap: "Landings in metric tons (mt) by year for each fleet."
+#| out.width: "\\textwidth"
+#| fig-cap: "Yelloweye Rockfish landing history in metric tons (mt) between 1889 and 2024 for each fleet."
 
 knitr::include_graphics("figures/r4ss_plots/plots/catch2_landings_stacked.png")
 
@@ -80,11 +81,11 @@ cat("\n\\end{landscape}\n")
 
 <!-- Date of last assessment, type of assessment model, data available, new information, and information lacking. -->
 
-The last assessment for Yelloweye Rockfish occurred in 2017. This update assessment extends the data used in the 2017 assessment through 2024. This assessment uses the stock assessment framework Stock Synthesis (SS3 Version 3.30.23.2; @methot_stock_2013) Data includes catch, length and age data from seven fishery fleets and multiple indices of abundance in California and Oregon/Washington. Two new historical catch reconstructions from Oregon and Washington were incorporated. Four indices of abundance were updated for this assessment, including two recreational fishery indices in Oregon, the \gls{indexwc}, and the \gls{iphc} longline survey. In addition, sample sizes and assignment of aging error were corrected in the compositional data. No new data were considered in this update assessment. 
+The last assessment for Yelloweye Rockfish occurred in 2017. This update assessment extends the data used in the 2017 assessment through 2024. This assessment uses the stock assessment framework Stock Synthesis (SS3 Version 3.30.23.2) by @methot_stock_2013. Data includes catch, length and age data from seven fishery fleets and multiple indices of abundance in California and Oregon/Washington. Two new historical catch reconstructions from Oregon and Washington were incorporated. Four indices of abundance were updated for this assessment, including two recreational fishery indices in Oregon, the \gls{indexwc}, and the \gls{iphc} longline survey. In addition, sample sizes and assignment of aging error were corrected in the compositional data. No new data streams were considered in this update assessment. 
 
 ## Stock biomass and dynamics{-}
 
-The Yelloweye Rockfish assessment uses estimates of the egg-to-length relationship from @dick_meta-analysis_2017, and spawning output is reported in millions of eggs. The unexploited level of spawning stock output is estimated to be `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SSB_Virgin")], 3)` million eggs (95% confidence interval: 999.2-1267.2 million eggs) (@fig-es-so). At the beginning of 2025, the spawning stock output is estimated to be `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SSB_2025")], 3)` million eggs (95% confidence interval:
+The Yelloweye Rockfish assessment uses estimates of fecundity (eggs-at-length) from the @dick_meta-analysis_2017 method, and spawning output is reported in millions of eggs. The unexploited level of spawning stock output is estimated to be `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SSB_Virgin")], 3)` million eggs (95% confidence interval: 999.2-1267.2 million eggs) (@fig-es-so). At the beginning of 2025, the spawning stock output is estimated to be `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SSB_2025")], 3)` million eggs (95% confidence interval:
 339.1–514.7 million eggs), which represents `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="Bratio_2025")], 3)*100`% of the unfished spawning output level.
 
 Estimated relative spawning output was below the minimum stock size threshold in the late 1990s and was lowest in the early 2000s before increasing over the last 20 years. The 2024 estimated relative spawning output follows an increasing trajectory and is just below the management target threshold (@fig-es-sb). Yelloweye Rockfish is modeled in two areas (California and Oregon-Washington) in this assessment. Current population status does differ by area and may be valuable information for making management and allocation decisions (@fig-status-area-es).
