--- a/report/08_tables.qmd
+++ b/report/08_tables.qmd
@@ -517,9 +517,7 @@ cat("\n\\end{landscape}\n")
 #| tbl-cap: !expr if(eval_tables) decision_table_cap 
 #| tbl-pos: H
  table_decision(
-   list(mod_low_A, mod_base_A, mod_high_A),
-   list(mod_low_B, mod_base_B, mod_high_B),
-   list(mod_low_C, mod_base_C, mod_high_C)
+   list(mod_low_A, mod_base_A, mod_high_A)
  )
 
 ```
