some changes to decision table and most recent render

--- a/report/01_executive_summary.qmd
+++ b/report/01_executive_summary.qmd
@@ -445,6 +445,7 @@ This section will be updated after SSC GFSC review.
  #| label: tbl-es-decision-1
  #| warning: false
  #| echo: false
+ #| message: false
  #| eval: !expr eval_tables 
  #| tbl-cap: !expr if(eval_tables) decision_table_cap 
  #| tbl-pos: H
