--- a/report/002_load_tables.qmd
+++ b/report/002_load_tables.qmd
@@ -224,8 +224,10 @@ catch_table_est_weights <- inputs$dat$catch |>
 
 <!-- Read in models for decision table as well as caption -->
 ```{r}
-#| echo: false
 #| eval: true
+#| warning: false
+#| echo: false
+#| message: false
 
 decision_table_cap <- "Decision table with 10-year projections. 'Mgmt' refers to the three management scenarios (A) the default harvest control rule $P^* = 0.45$, (B) harvest control rule with a lower $P^* = 0.40$. In each case the 2023 and 2024 catches are fixed at the ACLs which have been set for that year with estimated fleet allocation provided  by the GMT. The alternative states of nature ('Low', 'Base', and 'High' as discussed in the text) are provided in the columns, with Spawning Output ('Spawn', in trillions of eggs) and Fraction of unfished spawning output ('Frac') provided for each state."
 
