--- a/report/04a_model_summary.qmd
+++ b/report/04a_model_summary.qmd
@@ -18,7 +18,7 @@ This section is not required for an update assessment.
 
 The assessment was updated to use the most recent version of Stock Synthesis 3 (Version 3.30.23.2 - available [online](https://github.com/nmfs-ost/ss3-source-code/releases/tag/v3.30.23.2)). Bridging between SS versions is discussed in Section @sec-changes. 
 
-Briefly, the Yelloweye Rockfish model is a coastwide, single-sex, two-area model. California is Area 1, and Oregon and Washington are combined into Area 2; the areas are separated because of differences in potential exploitation rates by area over time. Yelloweye Rockfish compositional data are primarily reported as both sexes combined, and therefore, the previous assessment used a single sex model to facilitate the use of all available data. Growth is assumed to be the same in both areas, though future benchmark assessments may want to re-evaluate this assumption if more spatially-explicit data become available. Both growth and initial recruitment parameters were estimated internally, while all other biological parameters were fixed. The modeling period starts in the first year of available catches from historical reconstructions (1889) and the stock is assumed to be at an unfished equilibrium prior to that time. No changes were made to the fleet structure of the model. Fishery removals were divided among seven area- and sector-specific fleets. Estimated discard mortality was added to landings and included in the model as fleet-specific total removals. Length compositions for discarded and retained fish were combined as well. Data weighting was done using the Francis method [@francis_data_2011] but the McAllister-Ianelli method was explored as a sensitivity. More detailed information on the model structure and justification is available in @gertseva_stock_2017 and summarized in @tbl-model-config.
+Briefly, the Yelloweye Rockfish model is a coastwide, single-sex, two-area model. California is Area 1, and Oregon and Washington are combined into Area 2; the areas are separated because of differences in potential exploitation rates by area over time. Yelloweye Rockfish compositional data are primarily reported as both sexes combined, and therefore, the previous assessment used a single sex model to facilitate the use of all available data. Growth is assumed to be the same in both areas, though future benchmark assessments may want to re-evaluate this assumption if more spatially-explicit data become available. Both growth and initial recruitment parameters were estimated internally, while all other biological parameters were fixed. The modeling period starts in the first year of available catches from historical reconstructions (1889) and the stock is assumed to be at an unfished equilibrium prior to that time. No changes were made to the fleet structure of the model. Fishery removals were divided among seven area- and sector-specific fleets. Estimated discard mortality was added to landings and included in the model as fleet-specific total removals. Length compositions for discarded and retained fish were combined as well. Data weighting was done using the Francis method [@francis_data_2011]. More detailed information on the model structure and justification is available in @gertseva_stock_2017 and summarized in @tbl-model-config.
 
 ### Model Changes from the Last Assessment{#sec-changes}
 
@@ -28,7 +28,7 @@ A list of changes that were made to the model compared to the previous assessmen
     - Detailed information on specific updates and changes to the data included in the model are included in @sec-data but are summarized below. 
     - The landing time series were corrected and updated through the end of 2024 for California, Oregon and Washington. Overall, there was little change in the model results when updating and extending the catch time series, even after changes in the historical catch (@fig-bridge3-comp2 and @fig-bridge3-comp4). Though, the age 8+ biomass increased more for the most recent years than the forecasted estimates from 2017 (@fig-bridge3-comp18).   
     - Indices of abundance were updated with recent data, where available, and re-analyzed using more up-to-date methods. Updating indices lead to a slight decrease in ln($R$~0~), reducing the spawning output by very little (@fig-bridge5-comp2).
-    - Length and age compositions from all fishery removal and index fleets were updated and tuned through 2024. The addition of composition data greatly increased ln($R$~0~), which led to an increase in the spawning output, particularly for 1920-1980 (@fig-bridge14-comp2). This new data also changed the patter of the recruitment deviations significantly from 1990-2024 (@fig-bridge14-comp11). From 1990-2005 recruitment was lower than predicted in the last assessment, then from 2006-2016 recruitment was higher than the past, and finally recruitment dropped very low for 2017-2021. This shift to lower estimated recruitment for recent years seems to have slowed the recovery curve (@fig-bridge14-comp2).
+    - Length and age compositions from all fishery removal and index fleets were updated and tuned through 2024. The addition of composition data greatly increased ln($R$~0~), which led to an increase in the spawning output, particularly for 1920-1980 (@fig-bridge14-comp2). This new data also changed the pattern of the recruitment deviations significantly from 1990-2024 (@fig-bridge14-comp11). From 1990-2005 recruitment was lower than predicted in the last assessment, then from 2006-2016 recruitment was higher than the past, and finally recruitment dropped very low for 2017-2021. The lower estimated recruitment for recent years has slowed the recovery curve (@fig-bridge14-comp2).
 - Fleet structure:
     - No changes were made to the fleet structure.
 - Biology:
